--- a/config.json
+++ b/config.json
@@ -19,5 +19,5 @@
           "link": "https://segunda.tech/about"
         }
     },
-    "tags": ["podcast", "artigo", "vídeo", "programaçãofuncional", "arquitetura", "liderança", "poo", "web", "tdd", "java", "javascript", "integraçãocontínua", "spa", "vim", "flutter", "pdepodcast"]
+    "tags": ["podcast", "artigo", "vídeo", "programaçãofuncional", "arquitetura", "liderança", "poo", "web", "tdd", "java", "javascript", "integraçãocontínua", "spa", "vim", "flutter"]
 }
