--- a/config.json
+++ b/config.json
@@ -21,6 +21,7 @@
     },
     "tags": [
         "podcast",
+        "podcast-segunda.tech",
         "artigo",
         "vídeo",
         "programaçãofuncional",
