incluido tag da Alura

--- a/config.json
+++ b/config.json
@@ -46,6 +46,7 @@
         "elm",
         "pomodoro",
         "hipsters",
-        "virtual-dom"
+        "virtual-dom",
+        "alura"
     ]
 }
