✨ Adds Android download link to old post

--- a/config.json
+++ b/config.json
@@ -1,54 +1,55 @@
 {
-    "siteTitle": "segunda.tech",
-    "outputDir": "_site",
-    "copy": {
-        "/posts": "/"
-    },
-    "feed": {
-        "type": "rss",
-        "title": "segunda.tech",
-        "description": "Artigos, podcasts e vídeos explicando de forma simples e clara os conceitos mais importantes da área de desenvolvimento de software e ciência da computação em geral.",
-        "id": "https://segunda.tech",
-        "link": "https://segunda.tech/posts",
-        "image": "https://segunda.tech/img/logo.png",
-        "copyright": "Copyright: Marcio Frayze David",
-        "language": "pt-br",
-        "generator": "Elmstatic",
-        "author": {
-            "name": "Marcio Frayze David",
-            "link": "https://segunda.tech/about"
-        }
-    },
-    "tags": [
-        "podcast",
-        "podcast-segunda.tech",
-        "artigo",
-        "vídeo",
-        "programaçãofuncional",
-        "arquitetura",
-        "liderança",
-        "poo",
-        "web",
-        "tdd",
-        "java",
-        "javascript",
-        "integraçãocontínua",
-        "spa",
-        "vim",
-        "flutter",
-        "extremeprogramming",
-        "english",
-        "curso",
-        "clojure",
-        "fantasyconsole",
-        "pico-8",
-        "tic-80",
-        "elm",
-        "pomodoro",
-        "hipsters",
-        "virtual-dom",
-        "alura",
-        "edudu",
-        "touchwhen"
-    ]
+  "siteTitle": "segunda.tech",
+  "outputDir": "_site",
+  "copy": {
+    "/posts": "/"
+  },
+  "feed": {
+    "type": "rss",
+    "title": "segunda.tech",
+    "description": "Artigos, podcasts e vídeos explicando de forma simples e clara os conceitos mais importantes da área de desenvolvimento de software e ciência da computação em geral.",
+    "id": "https://segunda.tech",
+    "link": "https://segunda.tech/posts",
+    "image": "https://segunda.tech/img/logo.png",
+    "copyright": "Copyright: Marcio Frayze David",
+    "language": "pt-br",
+    "generator": "Elmstatic",
+    "author": {
+      "name": "Marcio Frayze David",
+      "link": "https://segunda.tech/about"
+    }
+  },
+  "tags": [
+    "podcast",
+    "podcast-segunda.tech",
+    "artigo",
+    "vídeo",
+    "programaçãofuncional",
+    "arquitetura",
+    "liderança",
+    "poo",
+    "web",
+    "tdd",
+    "java",
+    "javascript",
+    "integraçãocontínua",
+    "spa",
+    "vim",
+    "flutter",
+    "extremeprogramming",
+    "english",
+    "curso",
+    "clojure",
+    "fantasyconsole",
+    "pico-8",
+    "tic-80",
+    "elm",
+    "pomodoro",
+    "hipsters",
+    "virtual-dom",
+    "alura",
+    "edudu",
+    "touchwhen",
+    "tauri"
+  ]
 }
